<resources>
    <string name="app_name">ChallengeTigaAfifuddin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen_1">Screen 1</string>
    <string name="go_to_screen_2">Go To Screen 2</string>
    <string name="masukkan_nama">Masukkan nama</string>
    <string name="go_to_screen_3">Go To Screen 3</string>
    <string name="screen_2">Screen 2</string>
    <string name="screen_3">Screen 3</string>
    <string name="go_to_screen_4">Go To Screen 4</string>
    <string name="nama">Nama</string>
    <string name="screen_4">Screen 4</string>
    <string name="to_screen_3">Go To Screen 3</string>
    <string name="masukkan_usia">Masukkan Usia</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="masukkan_pekerjaan">Masukkan Pekerjaan</string>
    <string name="menghitung_keliling_segitiga">Menghitung Keliling Segitiga</string>
    <string name="masukkan_panjang_sisi_a">Masukkan Panjang Sisi A</string>
    <string name="masukkan_panjang_sisi_b">Masukkan Panjang Sisi B</string>
    <string name="masukkan_panjang_sisi_c">Masukkan Panjang Sisi C</string>
</resources>